--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "rollup -c -w",
-    "build": "rollup -c"
+    "dev": "sass --watch src/styles:public/build & rollup -c -w",
+    "build": "sass src/styles:public/build & rollup -c"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-node-resolve": "^15.0.0",
     "@rollup/plugin-terser": "^0.4.0",
     "rollup": "^3.15.0",
-    "rollup-plugin-css-only": "^4.3.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.1.2",
     "rollup-plugin-terser": "^7.0.2",
+    "sass": "^1.83.0",
     "svelte": "^3.55.0"
   }
 }
